# sysfex

./: :  .gitignore  CMakeLists.txt  README.md  config  fetch_functions.h  functions.h  install.sh  installer.sh  sysfex.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
data/: config  info  printables
data/ascii/: arch.txt
examples/: config  info
examples/Default/: config  info
examples/arch/: arch.txt  config  info
examples/ascii/: alien.txt
examples/catto/: config  info
examples/cool/: config  info
examples/neofetch-y/: config  info
include/: config.hpp  image.hpp  utils.hpp
include/modules/: colors.hpp  de.hpp  kernel.hpp  os.hpp  pkgs.hpp  shell.hpp
includes/: config.hpp  image.hpp  info.hpp  modules.hpp  sysfex.hpp  utils.hpp
includes/modules/: cpu.hpp  cpu_temp.hpp  de.hpp  distro.hpp  gpu.hpp  host.hpp  kernel.hpp  model.hpp  os.hpp  pkgs.hpp  ram.hpp  resolution.hpp  shell.hpp  swap.hpp  uptime.hpp  user.hpp
presets/: config  info
presets/ascii/: arch2.txt
src/: config.cpp  config.h  config.hpp  fetch_functions.h  functions.cpp  functions.h  functions.hpp  image.cpp  info.cpp  info.h  info.hpp  main.cpp  modules.h  modules.hpp  printables.h  shell_escape.cpp  shell_escape.hpp  sysfex.cpp  utils.cpp  utils.hpp
src/modules/: colors.cpp  colors.h  cpu.cpp  cpu.h  cpu.hpp  cpu_temp.cpp  de.cpp  de.h  distro.cpp  gpu.cpp  host.cpp  host.h  host.hpp  kernel.cpp  kernel.h  model.cpp  model.h  model.hpp  os.cpp  os.h  pkgs.cpp  pkgs.h  ram.cpp  ram.h  ram.hpp  resolution.cpp  resolution.h  resolution.hpp  shell.cpp  shell.h  swap.cpp  title.h  uptime.cpp  uptime.h  uptime.hpp  user.cpp  user.h  user.hpp
